// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comp4 should match snapshot 1`] = `
<div
  class="v-list theme--light"
  role="list"
>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      1
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Learn JavaScript
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Learn JavaScript
        </div>
      </div>
    </a>
  </div>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      2
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Learn Vue
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Learn Vue
        </div>
      </div>
    </a>
  </div>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      3
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Build something awesome
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Build something awesome
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`comp4 should match snapshot 2`] = `
<div
  class="v-list theme--light"
  role="list"
>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      1
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Learn JavaScript
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Learn JavaScript
        </div>
      </div>
    </a>
  </div>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      2
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Learn Vue
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Learn Vue
        </div>
      </div>
    </a>
  </div>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      3
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          Build something awesome
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          Build something awesome
        </div>
      </div>
    </a>
  </div>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__action"
      >
        
      4
    
      </div>
       
      <div
        class="v-list__tile__content"
      >
        <div
          class="v-list__tile__title"
        >
          test 4th element
        </div>
         
        <div
          class="v-list__tile__sub-title"
        >
          test 4th element
        </div>
      </div>
    </a>
  </div>
</div>
`;
